- https://github.com/eclipse-sirius/sirius-components/issues/1760[#1760] [project] Remove an invalid attribute from our pom.xml
- https://github.com/eclipse-sirius/sirius-components/issues/1675[#1675] [explorer] Align tree items without children with their siblings

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/1695[#1695] [view] Add a precondition expression to the node description

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/593[#593] [domain] Add support for referencing and extending other custom domains
- https://github.com/eclipse-sirius/sirius-components/issues/1518[#1518] [project] Remove the "format all code" save action in order to let us write code without having to specify "@formatter:off" everywhere. It will also make it easier for us to use IDEs other than Eclipse to contribute to Sirius Web

== v2023.3.0

=== Architectural decision records

- [ADR-085] Add support for project templates
- [ADR-086] Add support of edges as targets of single click tools
- [ADR-087] Provide the variables available to each operation
- [ADR-088] Align the lifecycle of views on the lifecycle of domains
- [ADR-089] Add a URL based kind to representation description
- [ADR-090] Improve support for compartments
- [ADR-091] Add support of the compartment expand/collapse
- [ADR-092] Add support for diagram nodes labels' auto-wrap
- [ADR-093] Improve node size control

=== Breaking changes

- [core] Records are now used as the implementations of `IInput`
- https://github.com/eclipse-sirius/sirius-components/issues/1574[#1574] [diagram] In `diagram.graphqls`, `SingleClickOnDiagramElementTool` member's `targetDescriptions` is now of new type `DiagramElementDescription` instead of `NodeDescription`.
- https://github.com/eclipse-sirius/sirius-components/issues/1614[#1614] [graphql] Add a SuccessPayload to replace most basic payloads