@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2022 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -77,7 +77,7 @@ export const Tree = ({ editingContextId, tree, onExpand, selection, setSelection
 
   return (
     <div ref={treeElement}>
-      <ul>
+      <ul data-testid="tree-root-elements">
         {tree.children.map((item) => (
           <li key={item.id}>
             <TreeItem
